--- a/BambuConfigGenerator/BambuConfigGenerator/App.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/App.xaml
@@ -4,12 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:BambuConfigGenerator"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Colors.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="svgc:SvgViewbox">
+                <Setter Property="Width" Value="26"></Setter>
+            </Style>
             <Style TargetType="TextBox">
                 <Setter Property="Margin" Value="20,15,0,15" />
                 <Setter Property="Padding" Value="5" />
