--- a/BambuConfigGenerator/BambuConfigGenerator/App.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/App.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:BambuConfigGenerator"
-    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -13,7 +13,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="svgc:SvgViewbox">
-                <Setter Property="Width" Value="26"></Setter>
+                <Setter Property="Width" Value="26" />
             </Style>
             <Style TargetType="TextBox">
                 <Setter Property="Margin" Value="20,15,0,15" />
