--- a/BambuConfigGenerator/BambuConfigGenerator/Views/PresetGenerator.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Views/PresetGenerator.xaml
@@ -233,8 +233,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <!--  Template  -->
+            <!--  Preset  -->
             <Label
                 Grid.Row="0"
                 Grid.Column="0"
@@ -244,13 +245,40 @@
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
-                Text="{Binding FolderWithTemplatesPath}"
+                Text="{Binding FolderWithPresetsPath}"
                 TextWrapping="Wrap" />
             <StackPanel
                 Grid.Row="0"
                 Grid.Column="2"
                 Orientation="Horizontal">
-                <Button Command="{Binding SelectFolderWithTemplates}" Content="Select file" />
+                <Button Command="{Binding SelectFolderWithPresets}" Content="Select file" />
+                <Button
+                    Width="40"
+                    Height="40"
+                    Margin="5,0"
+                    VerticalAlignment="Center"
+                    Command="{Binding OpenFolderWithPresetsCommand}">
+                    <svgc:SvgViewbox Source="/Resources/folder_24dp.svg" />
+                </Button>
+            </StackPanel>
+
+            <!--  Template  -->
+            <Label
+                Grid.Row="1"
+                Grid.Column="0"
+                Content="Template Path:" />
+            <TextBox
+                Grid.Row="1"
+                Grid.Column="1"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top"
+                Text="{Binding FolderWithTemplatesPath}"
+                TextWrapping="Wrap" />
+            <StackPanel
+                Grid.Row="1"
+                Grid.Column="2"
+                Orientation="Horizontal">
+                <Button Command="{Binding SelectFolderWithTemplates}" Content="Select folder" />
                 <Button
                     Width="40"
                     Height="40"
@@ -263,19 +291,19 @@
 
             <!--  OUTPUT  -->
             <Label
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="0"
                 Content="Output Folder:" />
             <TextBox
                 Grid.Column="1"
+                Grid.Row="2"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 Text="{Binding OutputFolder}"
                 TextWrapping="Wrap">
-                <Grid.Row>1</Grid.Row>
             </TextBox>
             <StackPanel
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="2"
                 Orientation="Horizontal">
                 <Button Command="{Binding SelectFolderCommand}" Content="Select Folder" />
