--- a/BambuConfigGenerator/BambuConfigGenerator/Views/FileGeneratorView.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Views/FileGeneratorView.xaml
@@ -34,6 +34,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
@@ -238,20 +239,35 @@
                 Text="{Binding FilamentFlowRatio}"
                 TextWrapping="Wrap" />
 
-            <!--  Template  -->
+            <!--  Pressure  -->
             <Label
                 Grid.Row="6"
                 Grid.Column="0"
-                Content="Template Path:" />
+                Content="K:" />
             <TextBox
                 Grid.Row="6"
+                Grid.Column="1"
+                Width="120"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                HorizontalContentAlignment="Center"
+                Text="{Binding K}"
+                TextWrapping="Wrap" />
+
+            <!--  Template  -->
+            <Label
+                Grid.Row="7"
+                Grid.Column="0"
+                Content="Template Path:" />
+            <TextBox
+                Grid.Row="7"
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 Text="{Binding FolderWithTemplatesPath}"
                 TextWrapping="Wrap" />
             <StackPanel
-                Grid.Row="6"
+                Grid.Row="7"
                 Grid.Column="2"
                 Orientation="Horizontal">
                 <Button Command="{Binding SelectFolderWithTemplates}" Content="Select folder" />
@@ -267,18 +283,18 @@
 
             <!--  OUTPUT  -->
             <Label
-                Grid.Row="7"
+                Grid.Row="8"
                 Grid.Column="0"
                 Content="Output Folder:" />
             <TextBox
-                Grid.Row="7"
+                Grid.Row="8"
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 Text="{Binding SelectedFolder}"
                 TextWrapping="Wrap" />
             <StackPanel
-                Grid.Row="7"
+                Grid.Row="8"
                 Grid.Column="2"
                 Orientation="Horizontal">
                 <Button Command="{Binding SelectFolderCommand}" Content="Select Folder" />
@@ -295,7 +311,7 @@
 
             <!--  Printer & nozzle  -->
             <Grid
-                Grid.Row="8"
+                Grid.Row="9"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
                 Margin="10,0,0,0">
